index.css
body {
    display: flex;
    justify-content: center;       
    align-items: center;            
    background-color: #20244c;
    margin: 0;
    flex-direction: column;
    height: 100vh;                  

}

.container {
    display: flex;
    justify-content: space-around;
    max-width: 600px;
    width: 100%;    
    margin: 0 auto;
}

h3 {
    color: #FFFFFF;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: 500px;
    margin-bottom: 0.8px;
}

.container div {
    text-align: center;          
}


@font-face {
  font-family: 'ScoreBoard';
  src: url('fonts/ScoreBoard.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}


.score {
    background-color: black;
    display: flex;
    color: #ff4d4f;
    font-size: 2rem;    
    font-weight: 700;
    justify-content: center;
    align-items: center;
    width: 100px;
    height: 75px;
    max-width: 300px;
    font-family: 'Cursed Timer ULiL', monospace;
}


button {
    background-color: transparent;
    border: 0.5px solid, white;
    color: #FFFFFF;
    border-radius: 3px;
    border-color: #FFFFFF;
    margin-top: 10px;
}



button:hover {
  background-color: rgba(255,255,255,0.2); 
}

